--- a/como-incluir-meu-site-no-google-e-como-fazer-com-que-ele-tenha-um-melhor-resultado-nas-buscas.html
+++ b/como-incluir-meu-site-no-google-e-como-fazer-com-que-ele-tenha-um-melhor-resultado-nas-buscas.html
@@ -1,1 +1,2 @@
-teste
+<a>O Google possui uma área que permite a inclusão de endereços para indexação. O link encontra-se abaixo:</a>
+http://www.google.com.br/add_url.html
